2008-04-08  Vincent Untz  <vuntz@gnome.org>

	Remove the rotation step in the map. I believe the goal was to make it
	possible to display a map where the center is not 0/0 (lat/lon) but the
	center is hardcoded to 0/0 right now and I don't think it makes sense
	to rotate the map since this view is really usual.
	Might fix #516345.

	* clock-map.c: (clock_map_finalize), (clock_map_expose),
	(clock_map_display): trivial updates
	(clock_map_rotate): kill

2008-04-08  Vincent Untz  <vuntz@gnome.org>

	* clock-map.c: make last_refresh a time_t since we don't need struct tm
	(clock_map_init): initialize last_refresh
	(clock_map_display): update the last_refresh time here
	(clock_map_needs_refresh): simplify a bit, do not update the
	last_refresh time here since we didn't refresh anything, and also take
	into account the fact that the clock can go back in the past when
	changing time

2008-04-08  Vincent Untz  <vuntz@gnome.org>

	* clock-location.[ch]: remove clock_location_new_from_env(). Not really
	sure it's a good thing to have (can give pretty wrong results), and
	it's not used.

==================== 2.22.1.1 ====================

2008-04-08  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (location_set_current_cb): don't refresh the map if there's
	no map. Fix a crash.

==================== 2.22.1 ====================

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	* clock-location.c: (clock_location_is_current): emit the set-current
	signal when changing the current location
	* clock.c: (run_prefs_edit_save): set the new location as current if it
	makes sense

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	* calendar-sources.c: fix compilation
	(calendar_sources_load_esource_list): complete fix for bug #378854.
	There was a case where the handler wasn't disconnected.

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	* calendar-sources.c: (calendar_sources_finalize_source_data):
	disconnect the changed signal handler for esource_list. Might fix bug
	#488819.